--- a/Hell Driver Library/Hell Driver Library.vcxproj
+++ b/Hell Driver Library/Hell Driver Library.vcxproj
@@ -157,12 +157,14 @@
     <ClCompile Include="DriverEntry.c" />
     <ClCompile Include="HUtil.c" />
     <ClCompile Include="IRP.c" />
+    <ClCompile Include="Memory.c" />
     <ClCompile Include="SSDTHook.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common.h" />
     <ClInclude Include="Hell.h" />
     <ClInclude Include="HUtil.h" />
+    <ClInclude Include="Memory.h" />
     <ClInclude Include="SSDTHook.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
