遍历进程句柄

--- a/HellDriverLib/HellDriverLib.vcxproj.filters
+++ b/HellDriverLib/HellDriverLib.vcxproj.filters
@@ -5,10 +5,6 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
@@ -16,25 +12,28 @@
     <Filter Include="进程保护">
       <UniqueIdentifier>{58fb1a39-6fa0-470e-8119-c353409a6179}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Driver">
-      <UniqueIdentifier>{e53b028a-0264-42a4-89bc-ada3ca561116}</UniqueIdentifier>
-    </Filter>
     <Filter Include="内核内存读写">
       <UniqueIdentifier>{b79df33b-aa7b-4f53-8486-e95a82028b39}</UniqueIdentifier>
     </Filter>
     <Filter Include="遍历钩子">
       <UniqueIdentifier>{d09bda31-95c1-472a-9769-b440094ce3d6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="工具">
+      <UniqueIdentifier>{26d6c5de-0cb4-46e7-8fe8-6f94158a029d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="全局">
+      <UniqueIdentifier>{e53b028a-0264-42a4-89bc-ada3ca561116}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="工具\进程相关">
+      <UniqueIdentifier>{7c5cd5e9-b7cf-4653-b626-b4aa896f5ebb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="工具\接口导入">
+      <UniqueIdentifier>{06c27412-db99-4dfe-9130-9a6e3f2db192}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="framework.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Hell.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="HellDriver.h">
-      <Filter>Driver</Filter>
+      <Filter>全局</Filter>
     </ClInclude>
     <ClInclude Include="KeMemory.h">
       <Filter>内核内存读写</Filter>
@@ -45,10 +44,28 @@
     <ClInclude Include="ProcessAccess.h">
       <Filter>进程保护</Filter>
     </ClInclude>
+    <ClInclude Include="Hell.h">
+      <Filter>全局</Filter>
+    </ClInclude>
+    <ClInclude Include="framework.h">
+      <Filter>全局</Filter>
+    </ClInclude>
+    <ClInclude Include="HTools.h">
+      <Filter>工具</Filter>
+    </ClInclude>
+    <ClInclude Include="ProcessUtil.h">
+      <Filter>工具\进程相关</Filter>
+    </ClInclude>
+    <ClInclude Include="Struct.h">
+      <Filter>全局</Filter>
+    </ClInclude>
+    <ClInclude Include="CallImport.h">
+      <Filter>工具\接口导入</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HellDriver.cpp">
-      <Filter>Driver</Filter>
+      <Filter>全局</Filter>
     </ClCompile>
     <ClCompile Include="KeMemory.cpp">
       <Filter>内核内存读写</Filter>
@@ -58,6 +75,12 @@
     </ClCompile>
     <ClCompile Include="ProcessAccess.cpp">
       <Filter>进程保护</Filter>
+    </ClCompile>
+    <ClCompile Include="ProcessUtil.cpp">
+      <Filter>工具\进程相关</Filter>
+    </ClCompile>
+    <ClCompile Include="CallImport.cpp">
+      <Filter>工具\接口导入</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
